--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.112.1",
     "@react-three/fiber": "^8.17.7",
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "r3f-perf": "^7.2.1",
